fixed the alignment and sizing of the send button

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -50,11 +50,10 @@ body{
 
 	.send-btn {
 		background-color: $black;
-		margin-left: -2px;
 
 		p {
 			margin: 0px;
-    		padding: 19px;
+			padding: 19px 29px;		
 		}
 	}
 
